Sat Jun 22 18:53:10 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_pack): Support
	  INTEGER_PACK_FORCE_GENERIC_IMPLEMENTATION flag.
	  Fix byte order and word order handling in code specialized for
	  wordsize % SIZEOF_BDIGITS == 0.

	* internal.h (INTEGER_PACK_FORCE_GENERIC_IMPLEMENTATION): Defined.

Sat Jun 22 15:41:25 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rgengc_check_shady): add new WB miss checking
	  on RGENGC_CHECK_MODE >= 2.

	    (1) Save bitmaps before marking
	    (2) Run full marking
	    (3) On each traceable object,
	      (a) object        was not oldgen (== newly or shady object) &&
	      (b) parent object was     oldgen &&
	      (c) parent object was not remembered &&
	      (d) object        was not rememberd
	      then, it should be WB miss.

	  This idea of this checker is by Masaya Tarui <tarui@ruby-lang.org>.

Sat Jun 22 15:25:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/etc/etc.c (setup_passwd): revert r41560, unnecessary

Sat Jun 22 14:39:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/etc/etc.c (Init_etc): omit 'passwd' from definition of Etc::Passwd
	  if HAVE_STRUCT_PASSWD_PW_PASSWD is not defined to prevent mismatch of
	  fields and values in setup_passwd

Sat Jun 22 14:35:40 2013  Tanaka Akira  <akr@fsij.org>

	* ext/dl/cfunc.c (rb_dlcfunc_call): Use rb_big_pack instead of
	  rb_big2ulong_pack and rb_big2ull.

	* include/ruby/intern.h (rb_big2ulong_pack): Deprecated.

Sat Jun 22 14:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/etc/etc.c (setup_passwd): pass 0 as VALUE to rb_struct_new to
	  prevent segfault if the compiler passes it as a 32 bit integer on
	  a 64 bit ruby

Sat Jun 22 13:47:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_pack): MEMZERO can be used even if nails is not zero.

Sat Jun 22 13:43:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/etc/etc.c (etc_getpwnam): use PRIsVALUE in format string instead