@@ -259,6 +259,27 @@ class TestBignum < Test::Unit::TestCase
       assert_equal(-0x8070605040302010, Integer.test_unpack("\x80\x70\x60\x50\x40\x30\x20\x10", 8, 1, 0, BIG_ENDIAN|NEGATIVE))
     end
 
+    def test_unpack_orders
+      [MSWORD_FIRST, LSWORD_FIRST].each {|word_order|
+        [MSBYTE_FIRST, LSBYTE_FIRST, NATIVE_BYTE_ORDER].each {|byte_order|
+          1.upto(16) {|wordsize|
+            1.upto(20) {|numwords|
+              w = numwords*wordsize
+              ary = []
+              0.upto(w) {|i|
+                ary << ((i+1) % 256);
+              }
+              str = ary.pack("C*")
+              flags = word_order|byte_order
+              assert_equal(Integer.test_unpack(str, numwords, wordsize, 0, flags|GENERIC),
+                           Integer.test_unpack(str, numwords, wordsize, 0, flags),
+                          "Integer.test_unpack(#{str.dump}, #{numwords}, #{wordsize}, 0, #{'%#x' % flags})")
+            }
+          }
+        }
+      }
+    end
+
     def test_unpack2comp_single_byte
       assert_equal(-128, Integer.test_unpack("\x80", 1, 1, 0, TWOCOMP|BIG_ENDIAN))
       assert_equal(  -2, Integer.test_unpack("\xFE", 1, 1, 0, TWOCOMP|BIG_ENDIAN))
@@ -292,8 +313,12 @@ class TestBignum < Test::Unit::TestCase
 
     def test_unpack2comp_negative_zero
       0.upto(100) {|n|
-        assert_equal(-(256**n), Integer.test_unpack("\x00"*n, n, 1, 0, TWOCOMP|BIG_ENDIAN|NEGATIVE))
-        assert_equal(-(256**n), Integer.test_unpack("\x00"*n, n, 1, 0, TWOCOMP|LITTLE_ENDIAN|NEGATIVE))
+        str = "\x00"*n
+        flags = TWOCOMP|BIG_ENDIAN|NEGATIVE
+        assert_equal(-(256**n), Integer.test_unpack(str, n, 1, 0, flags))
+        flags = TWOCOMP|LITTLE_ENDIAN|NEGATIVE
+        assert_equal(-(256**n), Integer.test_unpack(str, n, 1, 0, flags),
+                    "Integer.test_unpack(#{str.dump}, #{n}, 1, 0, #{'%#x' % flags})")
       }
     end
   end
